Add recipe for paneer butter masala

--- a/recipes/paneer-butter-masala.html
+++ b/recipes/paneer-butter-masala.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Paneer Butter Masala</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="/recipes/paneer-butter-masala.html" rel="noopener noreferrer">Paneer Butter Masala</a>
+    <h1>Paneer Butter Masala</h1>
 </body>
 </html>
