Fix grammar in description of paneer butter masala

--- a/recipes/paneer-butter-masala.html
+++ b/recipes/paneer-butter-masala.html
@@ -12,7 +12,7 @@
     <img src="paneer-butter-masala.jpg.webp" alt="an image of paneer butter masala" height="500px" width="400px">
     <h2>Description</h2>
     <p>
-        This Paneer Butter Masala recipe is a rich and creamy dish of paneer (Indian cottage cheese) in a tomato, butter
+        Paneer Butter Masala is a rich and creamy dish of paneer (Indian cottage cheese) in a tomato, butter
         and cashew sauce.
         The acidity of the tomatoes and the sweetness of the cream make for a velvety, nearly addictive sauce.
     </p>
