Add recipe for Chole Bhature

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/paneer-butter-masala.html" rel="noopener noreferrer">Paneer Butter Masala</a>
+    <a href="recipes/paneer-butter-masala.html" rel="noopener noreferrer" target="_blank">Paneer Butter Masala</a>
 </body>
 </html>
