--- a/recipes/paneer-butter-masala.html
+++ b/recipes/paneer-butter-masala.html
@@ -36,7 +36,7 @@
         <li>Spices and Herbs</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2>Steps: </h2>
     <ol>
         <li>Heat 1 teaspoon of oil in a pan on medium heat. Once the oil is hot, add the bay leaf, cinnamon stick,
             cloves
