Add recipe for Pav Bhaji

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/paneer-butter-masala.html" rel="noopener noreferrer" target="_blank">Paneer Butter Masala</a>
+    <a href="recipes/chole-bhature.html" rel="noopener noreferrer" target="_blank">Chole Bhature</a>
+    <a href="recipes/pav-bhaji.html" rel="noopener noreferrer" target="_blank">Pav Bhaji</a>
 </body>
 </html>
