Arrange recipes in an unordered list

--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/paneer-butter-masala.html" rel="noopener noreferrer" target="_blank">Paneer Butter Masala</a>
-    <a href="recipes/chole-bhature.html" rel="noopener noreferrer" target="_blank">Chole Bhature</a>
-    <a href="recipes/pav-bhaji.html" rel="noopener noreferrer" target="_blank">Pav Bhaji</a>
+
+    <ul>
+        <li>
+            <a href="recipes/paneer-butter-masala.html" rel="noopener noreferrer" target="_blank">Paneer Butter
+                Masala</a>
+        </li>
+
+        <li>
+            <a href="recipes/chole-bhature.html" rel="noopener noreferrer" target="_blank">Chole Bhature</a>
+        </li>
+
+        <li>
+            <a href="recipes/pav-bhaji.html" rel="noopener noreferrer" target="_blank">Pav Bhaji</a>
+        </li>
+    </ul>
+
 </body>
+
 </html>
